## [1.1] - 2017-02-06
### Added
- Assigned and Observed modifications psm and ions

### Changed
- Information about modification is now integrated into single framework

## [1.0] - 2017-02-06

- shipping first stable

## [rc7] - 2017-20-05

- Added new Prophets with native modifications
- Added modification reports

## [rc6] - 2017-17-04

- Preparing release candidate 6
- Fixed TPP 5.0.0 with parameters

## [rc5] - 2017-27-03

- Preparing release candidate 5
- added TMT quantification
- Added Prophets 5.0

## [rc4] - 2017-27-03

- Preparing release candidate 4

## [rc3] - 2017-15-03

- Preparing release candidate 3

## [rc2] - 2017-13-03

- Preparing release candidate 2

## [rc1] - 2017-27-02

- Preparing release candidate 1

## [3.2b] - 2017-23-02
### Added
- label quantification for TMT
- protein quantification report based on labels
- clean command for removing the workspace

### Changed
- Repository renamed to beta for future release candidate

## [3.1b] - 2017-17-02
### Added
- init command is now used to create a workspace

### Changed
- A major refactoring was made in order to reduce the memory footprint and processing time.

## [3.0b] - 2017-26-01
### Added
- Filtering options added to abacus
- Added custom option to database
- Final databases now are sorted
- Peptide top probability added as a filter option
- noTopPep option added to the filter command

### Fixed
- When using a custom database, the final file was empty

### Changed
- Swapped the Apache license for GNPL v3.

## [2.9b] - 2017-25-01
### Fixed
- A bug on the FDR scoring that caused all filters to use the same FDR level.

## [2.8b] - 2017-25-01
### Added
- Abacus function is stable.

### Changed
- Extensive code refactoring.

### Fixed
- A bug on the database report was causing double entries to appear.

## [2.7b] - 2017-18-01
### Changed
- major rework on the log output.
- Extensive code refactoring, moved all filtering up level commands to phi.

## [2.6b] - 2017-16-01
### Added