@@ -259,9 +259,16 @@ func interactParser(p PeptideProphet, args []string) ([]string, error) {
 		mzfile := fmt.Sprintf("-a%s", datadir)
 		cmd.Args = append(cmd.Args, mzfile)
 
+		// -D<path_to_database>
 		if len(p.Database) > 0 {
 			db, _ := filepath.Abs(p.Database)
 			v := fmt.Sprintf("-D%s", db)
+			cmd.Args = append(cmd.Args, v)
+		}
+
+		// -L<min_peptide_len (default 7)>
+		if len(p.MinPepLen) > 0 {
+			v := fmt.Sprintf("-L=%s", p.MinPepLen)
 			cmd.Args = append(cmd.Args, v)
 		}
 
